--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/oritabi
-spring.datasource.username=postgres
-spring.datasource.password=postgrestest
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/teamB
+#spring.datasource.username=postgres
+#spring.datasource.password=postgrestest
