--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/teamB
+spring.datasource.url=jdbc:postgresql://192.168.199.182:5432/teamB
 spring.datasource.username=postgres
 spring.datasource.password=postgrestest
